// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Safe area view renders with content 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "alignItems": "stretch",
      "flex": 1,
      "flexDirection": "row",
      "overflow": "hidden",
    }
  }
>
  <Text>
    Content
  </Text>
</RCTSafeAreaView>
`;

exports[`Safe area view renders with custom styling 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "green",
      "flex": 1,
      "flexDirection": "row",
      "overflow": "hidden",
    }
  }
>
  <Text>
    Content
  </Text>
</RCTSafeAreaView>
`;

exports[`Safe area view renders without content 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "alignItems": "stretch",
      "flex": 1,
      "flexDirection": "row",
      "overflow": "hidden",
    }
  }
/>
`;
